--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
-        "illuminate/support": "^5.7",
         "laravel/framework": "5.7.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "tymon/jwt-auth": "^1.0.0-rc.2"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
