--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0",
         "vue": "^2.5.17"
+    },
+    "dependencies": {
+        "vue-router": "^3.0.2",
+        "vue-template-compiler": "^2.5.21",
+        "vuetify": "^1.3.15"
     }
 }
