--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     },
     "dependencies": {
         "vue-router": "^3.0.2",
+        "vue-simplemde": "^0.5.1",
         "vue-template-compiler": "^2.5.21",
         "vuetify": "^1.3.15"
     }
