--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
         "vue": "^2.5.17"
     },
     "dependencies": {
+        "laravel-echo": "^1.5.2",
+        "pusher-js": "^4.3.1",
         "vue-router": "^3.0.2",
         "vue-simplemde": "^0.5.1",
         "vue-template-compiler": "^2.5.21",
